IDE: fix overflowing console logs for good (closes #48)

--- a/IDE/public/stylesheet.css
+++ b/IDE/public/stylesheet.css
@@ -148,7 +148,7 @@ p {
 	overflow-x: auto;
 }
 #beaglert-consoleWrapper span{
-
+	white-space: pre-wrap;
 }
 #beaglert-consoleWrapper>div{
 	display: inline-block;
